- Propagate JAVA_OPTS and experimental options to read CGroup (https://developers.redhat.com/blog/2017/04/04/openjdk-and-containers/#more-433899) - Update `com.bmuschko.docker-java-application` to `6.6.1`