@@ -14,9 +14,9 @@ buildscript {
         classpath "jp.classmethod.aws:gradle-aws-plugin:0.35"
         classpath "com.github.viswaramamoorthy:gradle-util-plugins:0.1.0-RELEASE"
         classpath 'cz.alenkacz:gradle-scalafmt:1.7.0'
-        classpath 'com.bmuschko:gradle-docker-plugin:3.6.1'
     }
 }
+
 
 plugins {
     id "net.ltgt.apt" version "0.5"
@@ -24,6 +24,7 @@ plugins {
     id "org.scoverage" version "2.5.0"
     id 'maven-publish'
     id "me.champeau.gradle.jmh" version "0.5.0"
+    id 'com.bmuschko.docker-java-application' version '6.6.1'
 }
 
 apply plugin: 'java'
@@ -35,7 +36,6 @@ apply plugin: 'kr.motd.sphinx'
 apply plugin: 'application'
 apply plugin: 'ManifestClasspath'
 apply plugin: 'scalafmt'
-apply plugin: 'com.bmuschko.docker-java-application'
 
 group = 'beam'
 version = '0.8.6'
@@ -602,25 +602,17 @@ docker {
     javaApplication {
         baseImage = 'beammodel/miniconda3'
         maintainer = 'LBNL Beam Team'
-        tag = "beammodel/beam:$version"
+        mainClassName = 'beam.sim.RunBeam'
     }
 }
 
-dockerDistTar {
+dockerCreateDockerfile  {
+    environmentVariable 'JAVA_OPTS', '-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap'
     instruction 'RUN apt-get update && apt-get -y install python3 python3-pip python3-rtree libproj-dev proj-data proj-bin libgeos-dev npm'
     instruction 'RUN pip3 install --upgrade setuptools'
     instruction 'RUN pip3 install numpy pandas cython sklearn matplotlib mapclassify descartes geopandas contextily plotly collections-extended psutil requests'
     addFile 'src/main/python/events_analysis/', 'src/main/python/events_analysis/'
     addFile 'test/', 'test/'
-}
-
-dockerCopyDistResources {
-    from('src/main/python/events_analysis/') {
-        into('src/main/python/events_analysis/')
-    }
-    from('test/') {
-        into('test/')
-    }
 }
 
 jmh {
